--- a/css/style.css
+++ b/css/style.css
@@ -464,23 +464,51 @@ h4 {
 .header-buttons-menu-close {
   margin-top: -20px !important;
 }
-
-.button-menu-lk,
 .button-menu-telefon {
+  display: block;
+}
+.entry {
+  display: block;
+  /*display: none !important;*/
+}
+.exit {
+   /*display: block;*/
+  display: none !important;
+}
+.button-menu-lk,
+.button-menu-lk-ex {
+  display: none;
+}
+.button-menu-lk,
+.button-menu-telefon,
+.button-menu-lk-ex,
+.button-menu-lk-en {
   background-position: center center;
   background-size: 40px 40px;
-  display: block;
   position: relative;
   width: 50px;
   height: 50px;
   background-repeat: no-repeat;
   margin-top: 10px;
 }
-
+.button-menu-lk-en{
+  top: -5px;
+}
 .button-menu-lk {
   background-image: url("https://cdn.nyutonika.ru/icons/lk.svg");
 }
-
+.button-menu-lk-ex {
+  background-image: url("https://cdn.nyutonika.ru/icons/lk2-.svg");
+}
+.button-menu-lk-ex:hover {
+  background-image: url("https://cdn.nyutonika.ru/icons/lk3-.svg");
+}
+.button-menu-lk-en {
+  background-image: url("https://cdn.nyutonika.ru/icons/lk3+.svg");
+}
+.button-menu-lk-en:hover {
+  background-image: url("https://cdn.nyutonika.ru/icons/lk2+.svg");
+}
 .button-menu-telefon {
   background-image: url("https://cdn.nyutonika.ru/icons/telefon.svg");
 }
@@ -3045,7 +3073,12 @@ ul.accordion-answer>li>div>p {
     margin-top: 13px;
     height: 45px;
   }
-
+  .button-menu-lk {
+    display: block;
+  }
+  .button-menu-lk-en {
+    top: 0;
+}
   .section-dop2-reg-img {
     top: 370px;
   }
@@ -4202,7 +4235,9 @@ ul.accordion-answer>li>div>p {
   .button-one-mobile-header {
     display: none;
   }
-
+  .button-menu-lk-ex {
+    display: block;
+  }
   .header-mobile {
     margin-top: 0px !important;
   }
