--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@ html,
 body {
   max-width: 100%;
   overflow-x: hidden;
-  height: 100%;
+  
 }
 
 
@@ -159,7 +159,7 @@ body {
   line-height: 1;
   font-family: OpenSans, sans-serif;
   color: #24201E;
-
+  height: 100%;
 }
 
 div,
@@ -286,9 +286,11 @@ h4 {
 
 /*блоки*/
 .wrapper {
-  min-height: 100%;
+  height: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 
 .main {
@@ -339,6 +341,10 @@ h4 {
 }
 
 /*кнопки*/
+ 
+
+
+
 .scrollup {
   width: 105px;
   height: 105px;
@@ -348,7 +354,7 @@ h4 {
   right: 0;
   display: none;
   text-indent: -9999px;
-  background: url('../icons/наверх.svg') no-repeat;
+  background: url('https://cdn.nyutonika.ru/icons/наверх.svg') no-repeat;
   background-size: 60px 60px;
 }
 
