--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@ html,
 body {
   max-width: 100%;
   overflow-x: hidden;
-  
+
 }
 
 
@@ -341,7 +341,7 @@ h4 {
 }
 
 /*кнопки*/
- 
+
 
 
 
@@ -2758,6 +2758,236 @@ ul.accordion-answer>li>div>p {
   margin-top: 20px;
   margin-bottom: 100px;
 }
+
+/*-Блок с баннером и формой--*/
+.banner-trend-dop {
+  height: 0;
+}
+.banner-trend-dop > img{
+  position: relative;
+  display: block;
+  z-index: 0;
+}
+.banner-trend-dop_img-logoped {
+  left: 40%;
+  width: 800px;
+  top: 133px;
+  z-index: 999 !important;
+}
+.banner-trend-dop_img-logoped-aplle1 {
+  right: 60%;
+  top: 328px;
+}
+.banner-trend-dop_img-logoped-aplle2{
+  left: 50%;
+  bottom: 1070px;
+}
+.banner-trend-dop_img-logoped-circle {
+  left: 27%;
+  top: -1390px;
+}
+.banner-trend-dop_img-logoped-icon1 {
+  left: -15%;
+  top: -1567px;
+  width: 210px;
+}
+.banner-trend {
+  min-height: 820px;
+  margin-top: -70px;
+}
+.banner-trend > div > section {
+  display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 720px;
+}
+.banner-trend-form {
+  z-index: 1000;
+}
+.banner-trend-title {
+  font-family: 'Nunito-Bold';
+font-style: normal;
+font-weight: 700;
+font-size: 64px;
+line-height: 64px;
+color: #FFFFFF;
+padding-top: 150px;
+max-width: 670px;
+z-index: 1000;
+}
+.banner-trend-text {
+  font-family: 'Nunito-Bold';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 40px;
+    color: #FFFFFF;
+    max-width: 360px;
+    z-index: 1000;
+    padding-top: 100px;
+} 
+.banner-trend_logoped{
+  background-color: #D589CC;
+}
+
+
+/*-Анимированные цифры--*/
+.benefits-block {
+  z-index: 1200;
+    position: relative;
+    display: block;
+    background-color: #fff;
+    padding-top: 5px;
+}
+.benefits {
+  width: 100%;
+}
+
+.benefits__inner {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 925px;
+  margin: 0 auto;
+  padding: 10px 0;
+}
+
+.benefits__header {
+  width: 100%;
+  text-align: center;
+  line-height: 1.3;
+  padding: 0 15px 60px;
+  color: #333;
+  font-size: 2rem;
+  text-transform: uppercase;
+}
+
+.benefits__element {
+  width: 30%;
+}
+
+.benefits__icon {
+  display: block;
+  width: 60px;
+  height: 50px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+}
+
+.benefits__element p {
+  color: #333;
+
+  line-height: 1.3;
+}
+
+.benefits__number {
+  margin-bottom: 20px;
+  opacity: 0;
+  font-family: 'Nunito-Black';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 75px;
+  line-height: 106px;
+}
+
+.benefits__title {
+  font-family: 'OpenSans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 28px;
+  color: #2A3B4F;
+  max-width: 250px;
+}
+
+.benefits-logoped>div>div>p.benefits__number {
+  color: #AF65A7;
+}
+.benefits-number-after::after{
+  content: "+";
+}
+
+/*Блок с эффективностью*/
+.two-section-img-efficiency {
+  position: relative;
+  right: 50%;
+  z-index: -10;
+  bottom: 700px;
+  width: 800px;
+}
+.efficiency {
+  background: #FFFFFF;
+  border: 1px solid #AE00D4;
+  border-radius: 20px;
+  -webkit-box-shadow: 33px 33px 0px 0px #CC7DC3; 
+box-shadow: 33px 33px 0px 0px #CC7DC3;
+padding: 50px 90px;
+}
+.efficiency > p {
+  padding-bottom: 50px;
+}
+.efficiency > div > .uk-card {
+  border-radius: 20px;
+}
+.frame {
+	text-align: center;	
+	position: relative;
+	cursor: pointer;	
+	perspective: 500px; 
+}
+
+.frame .details {
+	width: 70%;
+	height: 80%;	
+		position: absolute;
+	content: "";
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%) rotateY(90deg);
+	transform-origin: 50%;
+	background: rgba(255,255,255,1);	
+	opacity: 0;
+	transition: all 0.4s ease-in;
+	
+}
+.frame:hover .details {
+	transform: translate(-50%, -50%) rotateY(0deg);
+	opacity: 1;
+}
+/*Блок с проблемами*/
+.problems{
+  background: #FCEDFF;
+  padding: 30px;
+}
+
+/*Блок с формой*/
+.form-trend {
+  background: #9C16B9;
+  padding: 30px;
+}
+.form-trend > div > section > h4 {
+  color: #fff;
+  font-size: 64px;
+line-height: 64px;
+}
+.form-trend-list{
+  background: #FFFFFF;
+box-shadow: 0px 0px 10.954px rgba(41, 41, 41, 0.1);
+border-radius: 20px;
+padding: 100px 50px;
+margin-bottom: 60px;
+}
+/*Заголовки страницы напрапвлений*/
+.title-trend-block{
+  font-family: 'Nunito-Black';
+font-style: normal;
+font-weight: 900;
+font-size: 48px;
+line-height: 64px;
+color: #24201E;
+}
+
 
 /*адаптив до 1340*/
 @media (max-width: 1340px) {
