--- a/css/style.css
+++ b/css/style.css
@@ -2763,70 +2763,78 @@ ul.accordion-answer>li>div>p {
 .banner-trend-dop {
   height: 0;
 }
-.banner-trend-dop > img{
+
+.banner-trend-dop>img {
   position: relative;
   display: block;
   z-index: 0;
 }
+
 .banner-trend-dop_img-logoped {
   left: 40%;
   width: 800px;
   top: 133px;
   z-index: 999 !important;
 }
+
 .banner-trend-dop_img-logoped-aplle1 {
   right: 60%;
   top: 328px;
 }
-.banner-trend-dop_img-logoped-aplle2{
+
+.banner-trend-dop_img-logoped-aplle2 {
   left: 50%;
   bottom: 1070px;
 }
+
 .banner-trend-dop_img-logoped-circle {
   left: 27%;
   top: -1390px;
 }
+
 .banner-trend-dop_img-logoped-icon1 {
   left: -15%;
   top: -1567px;
   width: 210px;
 }
+
 .banner-trend {
   min-height: 820px;
   margin-top: -70px;
 }
-.banner-trend > div > section {
+
+.banner-trend>div>section {
   display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    min-height: 720px;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 750px;
 }
-.banner-trend-form {
-  z-index: 1000;
-}
+
 .banner-trend-title {
   font-family: 'Nunito-Bold';
-font-style: normal;
-font-weight: 700;
-font-size: 64px;
-line-height: 64px;
-color: #FFFFFF;
-padding-top: 150px;
-max-width: 670px;
-z-index: 1000;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 64px;
+  line-height: 64px;
+  color: #FFFFFF;
+  padding-top: 150px;
+  max-width: 670px;
+  z-index: 1000;
 }
+
 .banner-trend-text {
   font-family: 'Nunito-Bold';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 40px;
-    color: #FFFFFF;
-    max-width: 360px;
-    z-index: 1000;
-    padding-top: 100px;
-} 
-.banner-trend_logoped{
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 40px;
+  color: #FFFFFF;
+  max-width: 360px;
+  z-index: 1000;
+  padding-top: 100px;
+}
+
+.banner-trend_logoped {
   background-color: #D589CC;
 }
 
@@ -2834,11 +2842,12 @@ z-index: 1000;
 /*-Анимированные цифры--*/
 .benefits-block {
   z-index: 1200;
-    position: relative;
-    display: block;
-    background-color: #fff;
-    padding-top: 5px;
+  position: relative;
+  display: block;
+  background-color: #fff;
+  padding-top: 5px;
 }
+
 .benefits {
   width: 100%;
 }
@@ -2904,7 +2913,8 @@ z-index: 1000;
 .benefits-logoped>div>div>p.benefits__number {
   color: #AF65A7;
 }
-.benefits-number-after::after{
+
+.benefits-number-after::after {
   content: "+";
 }
 
@@ -2916,49 +2926,147 @@ z-index: 1000;
   bottom: 700px;
   width: 800px;
 }
+
 .efficiency {
   background: #FFFFFF;
   border: 1px solid #AE00D4;
   border-radius: 20px;
-  -webkit-box-shadow: 33px 33px 0px 0px #CC7DC3; 
-box-shadow: 33px 33px 0px 0px #CC7DC3;
-padding: 50px 90px;
+  -webkit-box-shadow: 33px 33px 0px 0px #CC7DC3;
+  box-shadow: 33px 33px 0px 0px #CC7DC3;
+  padding: 50px 90px;
+  height: fit-content;
+
 }
-.efficiency > p {
+
+.problems>div>section>div>div.efficiency {
+  max-width: 550px !important;
+  padding: 50px 70px !important;
+}
+
+.efficiency>p {
   padding-bottom: 50px;
 }
-.efficiency > div > .uk-card {
+
+.efficiency>div>.uk-card {
   border-radius: 20px;
 }
+
+.efficiency-blok-title {
+  font-family: 'Nunito-Bold';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  color: #2A3B4F;
+}
+
+.efficiency-blok-text {
+  font-family: 'OpenSans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  color: #2A3B4F;
+}
+
 .frame {
-	text-align: center;	
-	position: relative;
-	cursor: pointer;	
-	perspective: 500px; 
+  position: relative;
+  cursor: pointer;
+  perspective: 500px;
+}
+
+.efficiency-blok-img {
+  display: flex;
+  justify-content: center;
+}
+
+.efficiency-blok-img>img {
+  max-width: 30px;
+  height: 30px;
+}
+
+.frame>div.details>img {
+  max-width: 73px;
+  height: 73px;
 }
 
 .frame .details {
-	width: 70%;
-	height: 80%;	
-		position: absolute;
-	content: "";
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%) rotateY(90deg);
-	transform-origin: 50%;
-	background: rgba(255,255,255,1);	
-	opacity: 0;
-	transition: all 0.4s ease-in;
-	
+  width: 90%;
+  height: 80%;
+  position: absolute;
+  content: "";
+  top: 50%;
+  left: 50%;
+  text-align: center;
+  transform: translate(-50%, -50%) rotateY(90deg);
+  transform-origin: 50%;
+  background: rgba(255, 255, 255, 1);
+  opacity: 0;
+  transition: all 0.4s ease-in;
+
 }
+
 .frame:hover .details {
-	transform: translate(-50%, -50%) rotateY(0deg);
-	opacity: 1;
+  transform: translate(-50%, -50%) rotateY(0deg);
+  opacity: 1;
 }
+
+
+.teacher-text-trend {
+  font-family: 'Nunito-Bold';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 48px;
+  text-align: center;
+  color: #24201E;
+  padding-bottom: 100px;
+}
+
 /*Блок с проблемами*/
-.problems{
+.problems {
   background: #FCEDFF;
   padding: 30px;
+}
+
+.problems>div>section>p {
+  font-family: 'Nunito-Bold';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 48px;
+  color: #2A3B4F;
+  padding-bottom: 50px;
+}
+
+.problems>div>section>div>div>ul {
+  padding-left: 20px;
+}
+
+.problems>div>section>div>div>ul>li {
+  font-family: 'Nunito-Bold';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 24px;
+  color: #24201D;
+  padding-bottom: 25px;
+}
+
+.problems>div>section>div>div>ul>li::before {
+  content: "";
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #229FA4;
+  position: relative;
+  display: block;
+  left: -35px;
+  top: 20px;
+}
+
+.problems>div>section>div>div>ul>li>ul {
+  margin-top: 15px;
 }
 
 /*Блок с формой*/
@@ -2966,26 +3074,119 @@ padding: 50px 90px;
   background: #9C16B9;
   padding: 30px;
 }
-.form-trend > div > section > h4 {
+
+.form-trend>div>section>h4 {
   color: #fff;
   font-size: 64px;
-line-height: 64px;
+  line-height: 64px;
 }
-.form-trend-list{
+
+.form-trend-list {
   background: #FFFFFF;
-box-shadow: 0px 0px 10.954px rgba(41, 41, 41, 0.1);
-border-radius: 20px;
-padding: 100px 50px;
-margin-bottom: 60px;
+  box-shadow: 0px 0px 10.954px rgba(41, 41, 41, 0.1);
+  border-radius: 20px;
+  padding: 50px 100px;
+  margin-bottom: 60px;
+}
+
+.form-trend-list>div {
+  font-family: 'Nunito-Bold';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 48px;
+  color: #2A3B4F;
+  padding-bottom: 30px;
+  padding-left: 40px;
+}
+
+.form-trend-list>div>span {
+  width: 23px;
+  height: 23px;
+  border-radius: 50%;
+  background-color: #20A0A0;
+  display: block;
+  position: relative;
+  left: -60px;
+  top: 50px;
+}
+
+.banner-trend-form {
+  z-index: 1000;
+}
+
+.banner-trend-form>div>input {
+  background: #FFFFFF;
+  border: 2px solid #AE00D4;
+  border-radius: 10px;
+  padding: 30px;
+  font-family: 'Nunito-Bold';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 20px;
+  height: 80px;
+  color: #888888;
+}
+
+.banner-trend-form>div>label {
+  font-family: 'OpenSans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
+  color: #FFFFFF;
+}
+
+.banner-trend-form>div>button {
+  background: #AE00D4;
+  border: 2px solid #d40dff;
+  border-radius: 10px;
+  font-family: 'Nunito-Bold';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 16px;
+  color: #fff;
+  height: 80px;
+  padding: 30px;
+  text-transform: none;
+}
+
+.banner-trend-form>div>button:hover {
+  background: #FFFFFF;
+  border: 2px solid #AE00D4;
+  color: #AE00D4;
+}
+
+.banner-trend-form>div>.uk-form-icon:not(.uk-form-icon-flip)~.uk-input {
+  padding-left: 25% !important;
+}
+
+.banner-trend-form>div>span.uk-form-icon {
+  left: 35px;
+  color: #ae00d4;
+}
+
+
+/*Как проходит бесплатная диагностика*/
+.diagnostika-logoped{
+  height: fit-content;
+  min-height: 1000px;
+  background-image: url("https://cdn.nyutonika.ru/svg/логопед-какпроходятзанятия-фон.svg");
+  background-position: 50% 100%;
+  background-repeat: no-repeat;
+  background-size: auto;
+  width: 100%;
 }
 /*Заголовки страницы напрапвлений*/
-.title-trend-block{
+.title-trend-block {
   font-family: 'Nunito-Black';
-font-style: normal;
-font-weight: 900;
-font-size: 48px;
-line-height: 64px;
-color: #24201E;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 48px;
+  line-height: 64px;
+  color: #24201E;
 }
 
 
